[gd_scene load_steps=7 format=3 uid="uid://bppeaqnbvnq6c"]

[ext_resource type="Texture2D" uid="uid://de15noo5jitv2" path="res://assets/art/enemysprite001.png" id="1_2iioe"]
[ext_resource type="Script" path="res://src/enemy/enemy.gd" id="1_ne60a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x25kp"]
atlas = ExtResource("1_2iioe")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_oww1o"]
atlas = ExtResource("1_2iioe")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_dnkuu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x25kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oww1o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kk18c"]
size = Vector2(8, 8)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_ne60a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dnkuu")
autoplay = "default"
speed_scale = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kk18c")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-4, 0)
target_position = Vector2(0, 8)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(4, 0)
target_position = Vector2(0, 8)

[node name="RayCastForward" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)

[node name="RayCastBackward" type="RayCast2D" parent="."]
target_position = Vector2(-8, 0)
